# bdr6qz_DS5111su24_lab_01

./: .gitignore  README.md  get_the_books.sh  makefile  pylintrc  pyproject.toml  pytest.ini  raven_counts.sh  raven_line_count.sh  raven_word_count.sh  requirements.txt  test_tokenizer.py  tokenizer.py  total_lines.sh  total_words.sh
.github/workflows/: validations.yml
src/bdr6qz/: __init__.py  tokenizer.py
src/bdr6qz/.ipynb_checkpoints/: tokenizer-checkpoint.py
src/pkg_bdr6qz/: __init__.py  tokenizer.py
src/pkg_bdr6qz/.ipynb_checkpoints/: __init__-checkpoint.py
tests/: test_clean_text.py  test_complicated.py  test_count_words.py  test_tokenizer.py
tests/.ipynb_checkpoints/: test_clean_text-checkpoint.py  test_count_words-checkpoint.py  test_tokenizer-checkpoint.py
