[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bdr6qz"
#% when I try and load the package pip succeeds.  Pip lists shows the package, however when I try to 
# import it it can't find it.  I think your directory name and the package name have to match.
# Is this working for you?
version = "0.0.1"
authors = [
    { name = "Wyatt Scott", email = "bdr6qz@virginia.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/WD-Scott/bdr6qz_DS5111su24_lab_01/issues"
