[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg_bdr6qz"
version = "0.0.1"
authors = [
    { name = "Wyatt Scott", email = "bdr6qz@virginia.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/WD-Scott/bdr6qz_DS5111su24_lab_01/issues"
